{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 241,
  "lineage": "f9c4aa68-f1f6-2532-b212-f1d206a6e508",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "IF-PROD-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkInterfaces/IF-PROD-0",
            "internal_domain_name_suffix": "s3omg5u5zjruff1lpjjyz3qztd.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IP-PROD-0",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/publicIPAddresses/PUBLIC-PROD-0",
                "subnet_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD/subnets/SUBNET-PROD-0"
              }
            ],
            "location": "australiacentral",
            "mac_address": "00-0D-3A-8A-17-68",
            "name": "IF-PROD-0",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "NSG-RG",
            "virtual_machine_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Compute/virtualMachines/VM-PROD-0"
          },
          "dependencies": [
            "azurerm_public_ip.PUBLIC-PROD-0",
            "azurerm_resource_group.rg",
            "azurerm_subnet.SUBNET-PROD-0",
            "azurerm_virtual_network.VNET-PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "IF-PROD-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkInterfaces/IF-PROD-1",
            "internal_domain_name_suffix": "s3omg5u5zjruff1lpjjyz3qztd.cbrx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "IP-PROD-1",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/publicIPAddresses/PUBLIC-PROD-1",
                "subnet_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD/subnets/SUBNET-PROD-0"
              }
            ],
            "location": "australiacentral",
            "mac_address": "00-0D-3A-95-FA-3E",
            "name": "IF-PROD-1",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "NSG-RG",
            "virtual_machine_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Compute/virtualMachines/VM-PROD-1"
          },
          "dependencies": [
            "azurerm_public_ip.PUBLIC-PROD-1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.SUBNET-PROD-0",
            "azurerm_virtual_network.VNET-PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_security_group_association",
      "name": "ASG-PROD0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "application_security_group_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/applicationSecurityGroups/ASG-PROD0",
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkInterfaces/IF-PROD-0|/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/applicationSecurityGroups/ASG-PROD0",
            "network_interface_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkInterfaces/IF-PROD-0"
          },
          "dependencies": [
            "azurerm_application_security_group.ASG-PROD0",
            "azurerm_network_interface.IF-PROD-0",
            "azurerm_public_ip.PUBLIC-PROD-0",
            "azurerm_resource_group.rg",
            "azurerm_subnet.SUBNET-PROD-0",
            "azurerm_virtual_network.VNET-PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_application_security_group_association",
      "name": "ASG-PROD1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "application_security_group_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/applicationSecurityGroups/ASG-PROD0",
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkInterfaces/IF-PROD-1|/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/applicationSecurityGroups/ASG-PROD0",
            "network_interface_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkInterfaces/IF-PROD-1"
          },
          "dependencies": [
            "azurerm_application_security_group.ASG-PROD0",
            "azurerm_network_interface.IF-PROD-1",
            "azurerm_public_ip.PUBLIC-PROD-1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.SUBNET-PROD-0",
            "azurerm_virtual_network.VNET-PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkSecurityGroups/NSG0",
            "location": "australiacentral",
            "name": "NSG0",
            "resource_group_name": "NSG-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.0.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "PERMIT_LOCAL_ICMP",
                "priority": 500,
                "protocol": "Icmp",
                "source_address_prefix": "10.0.0.4/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "DENY_ICMP_INET",
                "priority": 3999,
                "protocol": "Icmp",
                "source_address_prefix": "10.0.0.4/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "PERMIT_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": [
              "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/applicationSecurityGroups/ASG-PROD0"
            ],
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkSecurityGroups/NSG0/securityRules/PERMIT_SSH",
            "name": "PERMIT_SSH",
            "network_security_group_name": "NSG0",
            "priority": 500,
            "protocol": "Tcp",
            "resource_group_name": "NSG-RG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_application_security_group.ASG-PROD0",
            "azurerm_network_security_group.NSG0",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PUBLIC-PROD-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/publicIPAddresses/PUBLIC-PROD-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.213.237.198",
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "PUBLIC-PROD-0",
            "resource_group_name": "NSG-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PUBLIC-PROD-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/publicIPAddresses/PUBLIC-PROD-1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.213.237.66",
            "ip_version": "IPv4",
            "location": "australiacentral",
            "name": "PUBLIC-PROD-1",
            "resource_group_name": "NSG-RG",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SUBNET-DEV-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-DEV/subnets/SUBNET-DEV-0",
            "name": "SUBNET-DEV-0",
            "resource_group_name": "NSG-RG",
            "virtual_network_name": "VNET-DEV"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VNET-DEV"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SUBNET-PROD-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD/subnets/SUBNET-PROD-0",
            "name": "SUBNET-PROD-0",
            "resource_group_name": "NSG-RG",
            "virtual_network_name": "VNET-PROD"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VNET-PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SUBNET-PROD-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD/subnets/SUBNET-PROD-1",
            "name": "SUBNET-PROD-1",
            "resource_group_name": "NSG-RG",
            "virtual_network_name": "VNET-PROD"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VNET-PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SUBNET-QA-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-QA/subnets/SUBNET-QA-0",
            "name": "SUBNET-QA-0",
            "resource_group_name": "NSG-RG",
            "virtual_network_name": "VNET-QA"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.VNET-QA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NSG0-PROD0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD/subnets/SUBNET-PROD-0",
            "network_security_group_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkSecurityGroups/NSG0",
            "subnet_id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD/subnets/SUBNET-PROD-0"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG0",
            "azurerm_resource_group.rg",
            "azurerm_subnet.SUBNET-PROD-0",
            "azurerm_virtual_network.VNET-PROD"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNET-DEV",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c3583191-e424-44f0-9802-38e2dd89aa1b",
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-DEV",
            "location": "australiacentral",
            "name": "VNET-DEV",
            "resource_group_name": "NSG-RG",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-DEV/subnets/SUBNET-DEV-0",
                "name": "SUBNET-DEV-0"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNET-PROD",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7ec35c97-ca9f-4263-976b-7a538cf6199b",
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD",
            "location": "australiacentral",
            "name": "VNET-PROD",
            "resource_group_name": "NSG-RG",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD/subnets/SUBNET-PROD-0",
                "name": "SUBNET-PROD-0",
                "security_group": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/networkSecurityGroups/NSG0"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-PROD/subnets/SUBNET-PROD-1",
                "name": "SUBNET-PROD-1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "VNET-QA",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "49f228e9-79a4-4ad9-926c-e6d20cc0aaf6",
            "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-QA",
            "location": "australiacentral",
            "name": "VNET-QA",
            "resource_group_name": "NSG-RG",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/88b45aab-4ebb-412f-bc44-8483d3a0cbac/resourceGroups/NSG-RG/providers/Microsoft.Network/virtualNetworks/VNET-QA/subnets/SUBNET-QA-0",
                "name": "SUBNET-QA-0"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}